GNOME Bugzilla – Bug 672481
ephy-completion-model: fix a few leaks
Last modified: 2012-03-21 08:21:14 UTC
regarding the favicon code
Created attachment 210186 [details] [review] ephy-completion-model: fix a few leaks
Review of attachment 210186 [details] [review]: OK.
Attachment 210186 [details] pushed as 8322393 - ephy-completion-model: fix a few leaks