ephy-completion-model: fix a few leaks

https://bugzilla.gnome.org/show_bug.cgi?id=672481